Correction tablette/telephone

--- a/as/css/default.css
+++ b/as/css/default.css
@@ -3,6 +3,7 @@
 html, body {
 	margin: 0;
 	padding: 0;
+	min-width: 1200px;
 }
 
 body {
